Define heroku start script

--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
         "watch": "mocha-typescript-watch",
         "build": "webpack --verbose && yarn app --generateSwagger",
         "clean": "rm -rf dist/*",
-        "app": " ts-node -r tsconfig-paths/register ./src/server.ts"
+        "app": " ts-node -r tsconfig-paths/register ./src/server.ts",
+        "start": "yarn app"
     },
     "pre-commit": [
         "lint",
